PM: change api imports in the api calls
